--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   IMAGE_NAME: jberny/crocodile
+  GHCR_USER: JBerny
 
 jobs:
 
@@ -23,5 +24,5 @@ jobs:
         
         image_tag="${IMAGE_NAME}:$(date +%s)"
         docker build . --file Dockerfile --tag "$image_tag"
-        echo -n "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u JBerny
+        echo -n "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${GHCR_USER} --password-stdin
         docker push ghcr.io/${image_tag}
