--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,9 +6,6 @@ on:
   pull_request:
     branches: [ "master" ]
 
-env:
-  GHCR_USER: JBerny
-
 jobs:
 
   build:
@@ -18,10 +15,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Push Docker image
+    - name: Build and Push Crocodile Docker image
       run: |
-        
         image_tag="${{ vars.IMAGE_NAME }}:$(date +%s)"
-        docker build . --file Dockerfile --tag "$image_tag"
-        echo -n "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${GHCR_USER} --password-stdin
+        docker build . --file ./images/crocodile/Dockerfile --tag "$image_tag"
+        echo -n "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ secrets.GHCR_USER }}" --password-stdin
         docker push ${image_tag}
