--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,46 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    # https://github.com/docker/setup-qemu-action
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
     
-    - name: Build and Push Crocodile Docker image
-      run: |
-        image_tag="${{ vars.IMAGE_NAME }}:$(date +%s)"
-        docker build . --file ./images/crocodile/Dockerfile --tag "$image_tag"
-        echo -n "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ secrets.GHCR_USER }}" --password-stdin
-        docker push ${image_tag}
+    # https://github.com/docker/setup-buildx-action
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v2
+
+    # https://github.com/docker/metadata-action
+    - name: Add metadata
+      uses: docker/metadata-action@v4
+      id: meta
+      with:
+        images: "${{ vars.IMAGE_NAME }}"
+        tags: |
+          type=schedule
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=semver,pattern={{major}}
+          type=sha
+
+    # https://github.com/docker/login-action
+    - name: Login to GHCR
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.GHCR_USER }}
+        password: ${{ secrets.GHCR_TOKEN }}
+
+    # https://github.com/docker/build-push-action
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        file: ./images/crocodile/Dockerfile
+        context: .
+        platforms: linux/amd64,linux/arm64
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
