--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,8 +46,10 @@ jobs:
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v2
       with:
+        registry: ghcr.io
         username: ${{ secrets.GHCR_USER }}
         password: ${{ secrets.GHCR_TOKEN }}
+
 
     # https://github.com/docker/build-push-action
     - name: Build and push
